--- a/dibujoconclick.html
+++ b/dibujoconclick.html
@@ -26,6 +26,17 @@
       <input type ="text" id = "texto_lineas2">
       <input type = "button" value = "Click aquí" id= "botoncito2">
       </p>
+      <p> Cuantas lineas verdes quieres
+      <input type ="text" id = "texto_lineas3">
+      <input type = "button" value = "Click aquí" id= "botoncito3">
+      </p>
+      <p> Cuantas lineas azules quieres
+      <input type ="text" id = "texto_lineas4">
+      <input type = "button" value = "Click aquí" id= "botoncito4">
+      </p>
+      <p>
+      <input type = "button" value = "Limpiar" id= "botoncito5">
+      </p>
     <canvas width ="300" height="300" id="dibujito"></canvas>
     <p><strong>Asi queda tu dibujo</strong> </p>
     <script src="dibujoconclick.js"></script>
