--- a/dibujoconclick.html
+++ b/dibujoconclick.html
@@ -20,22 +20,22 @@
     <h1>Dibujo en canvas</h1>
     <p> Cuantas líneas rojas quieres
       <input type= "text" id= "texto_lineas" />
-      <input type="button" value ="Click aquí" id= "botoncito"/>
+      <input type="button" value ="Click aquí" id= "botoncito" />
      </p>
       <p> Cuantas lineas violetas quieres
       <input type ="text" id = "texto_lineas2">
-      <input type = "button" value = "Click aquí" id= "botoncito2">
+      <input type = "button" value = "Click aquí" id= "botoncito2" />
       </p>
       <p> Cuantas lineas verdes quieres
       <input type ="text" id = "texto_lineas3">
-      <input type = "button" value = "Click aquí" id= "botoncito3">
+      <input type = "button" value = "Click aquí" id= "botoncito3" />
       </p>
       <p> Cuantas lineas azules quieres
       <input type ="text" id = "texto_lineas4">
-      <input type = "button" value = "Click aquí" id= "botoncito4">
+      <input type = "button" value = "Click aquí" id= "botoncito4" />
       </p>
       <p>
-      <input type = "button" value = "Limpiar" id= "botoncito5">
+      <input type = "button" value= "Limpiar" id= "BotonLimpiar" />
       </p>
     <canvas width ="300" height="300" id="dibujito"></canvas>
     <p><strong>Asi queda tu dibujo</strong> </p>
