--- a/dibujoconclick.html
+++ b/dibujoconclick.html
@@ -36,6 +36,8 @@
       </p>
       <p>
       <input type = "button" value= "Limpiar" id= "BotonLimpiar" />
+      <p>
+        <input type ="button" value= "Cuadros" id= "BotonCuadros" />
       </p>
     <canvas width ="300" height="300" id="dibujito"></canvas>
     <p><strong>Asi queda tu dibujo</strong> </p>
